--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -51,10 +51,14 @@
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">Product</th>
+                <th scope="col">
+
+                  Product
+                </th>
+                <!-- <th scope="col">Remove</th> -->
                 <th scope="col">Price</th>
                 <th scope="col">Quantity</th>
-                <!-- <th scope="col">Remove</th> -->
+              
                 <th></th>
                 <th scope="col">Total</th>
 
@@ -83,11 +87,17 @@
                         </div>
                       </div>
                     </td>
+                   
                     <td>
                       <h5 id="price">
                         <%= cartItem.product_id.price%>
                       </h5>
                     </td>
+                    <!-- <td>
+                      <h5 id="price">
+                        <%= cartItem.product_id.price%>
+                      </h5>
+                    </td> -->
                     <td>
                       <div class="product_count">
                         <span class="quantity-decrement"
